@@ -4,12 +4,12 @@
 <center> 
 {total_matchs}
  {next_matchs}
-	
+  {error}	
   <table width=85% border=0 cellspacing=1 cellpadding=3>
     <tr bgcolor="{th_bg}">
       <td width="8%" bgcolor="{th_bg}" align=center>{sort_num}</td>
       <td width="30%" bgcolor="{th_bg}" align=center>{sort_descr}</td>
-      <td width="10%" bgcolor="{th_bg}" align=center>{sort_billperae}</td>
+      <td width="10%" bgcolor="{th_bg}" align=center>{currency}&nbsp;{sort_billperae}</td>
       <td width="10%" bgcolor="{th_bg}" align=center>{sort_minperae}</td>
       <td width="8%" bgcolor="{th_bg}" align=center>{h_lang_edit}</td>
       <td width="8%" bgcolor="{th_bg}" align=center>{h_lang_delete}</td>
