@@ -13,4 +13,5 @@
             included address in print invoice & delivery
 12/01/2000: update activities listing in editproject
 12/02/2000: update lang -> Project ID, Activity ID, Invoice ID, Delivery ID
-12/03/2000: moved select own address to preferences 
+12/03/2000: moved select own address to preferences
+12/09/2000: update invoice & activities to display currency 
